--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -670,7 +670,8 @@ server {
         rewrite ^/docs/conscientiousness/(?<old>.*)$ /docs/psychology/personality/conscientiousness/$old permanent;
         rewrite ^/docs/spaced-repetition/(?<old>.*)$ /docs/psychology/spaced-repetition/$old permanent;
         rewrite ^/docs/prediction/(?<old>.*)$ /docs/statistics/prediction/$old permanent;
-        rewrite ^/docs/terrorism/(?<old>.*)$ /docs/statistics/crime/terrorism/$old permanent;
+        rewrite ^/docs/terrorism/(?<old>.*)$ /docs/crime/terrorism/$old permanent;
+        rewrite ^/docs/statistics/crime/terrorism/(?<old>.*)$ /docs/crime/terrorism/$old permanent;
         rewrite ^/docs/genetics/selection/dysgenics/(?<old>.*)$ /docs/genetics/selection/natural/human/dysgenics/$old permanent;
         rewrite ^/docs/genetics/selection/index-selection/(?<old>.*)$ docs/genetics/selection/artificial/index-selection/$old permanent;
         rewrite ^/docs/genetics/selection/apple/(?<old>.*)$ docs/genetics/selection/artificial/apple/$old permanent;
@@ -680,6 +681,8 @@ server {
         rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
         rewrite ^/docs/sf/(?<old>.*)$ /docs/fiction/science-fiction/$old permanent;
         rewrite ^/(?<original>docs/.*),pdf$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)%C3%A7$ /$original permanent;
+        rewrite ^/(?<original>.*)/index/index$ /$original/index permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
