--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -1174,11 +1174,6 @@
 "~^/docs/dnb/2007-mcmorris-2\.pdf$" "/docs/creatine/2007-mcmorris-2.pdf";
 "~^/docs/2008-rawson\.pdf$" "/docs/creatine/2008-rawson.pdf";
 "~^/docs/dnb/2008-rawson\.pdf$" "/docs/creatine/2008-rawson.pdf";
-"~^/docs/psychology/docs/cs/1955-nash$" "/docs/cs/1955-nash";
-"~^/docs/docs/cs/1955-nash$" "/docs/cs/1955-nash";
-"~^/docs/1955-nash$" "/docs/cs/1955-nash";
-"~^/docs/cs/1955-nash\)$" "/docs/cs/1955-nash";
-"~^/docs/1955-nash\.page$" "/docs/cs/1955-nash.page";
 "~^/docs/cs/1982-perlis.pdf%27$" "/docs/cs/1982-perlis.pdf";
 "~^/docs/1982-perlis\.pdf$" "/docs/cs/1982-perlis.pdf";
 "~^/docs/cs/1982-perlis\.pdf'$" "/docs/cs/1982-perlis.pdf";
@@ -1468,9 +1463,6 @@
 "~^/docs/2010-crc$" "/docs/eva/2010-crc";
 "~^/docs/eva/2010$" "/docs/eva/2010-crc";
 "~^/docs/2010-koh\.pdf$" "/docs/eva/2010-koh.pdf";
-"~^/software/docs/eva/2011-house$" "/docs/anime/eva/2011-house";
-"~^/docs/2011-house$" "/docs/anime/eva/2011-house";
-"~^/docs/2011-house\.page$" "/docs/eva/2011-house.page";
 "~^/docs/2011-mindframe\.pdf$" "/docs/eva/2011-mindframe.pdf";
 "~^/docs/eva/null$" "/docs/eva/index";
 "~^/docs/fiction/1980-herbert-withoutmeyourenothing\.djvu$" "/docs/fiction/1980-herbert-withoutmeyourenothing.pdf";
@@ -5986,7 +5978,6 @@
 "~^/docs/1999-bradb\.\.\.shkabrains\.pdf$" "/docs/ai/1999-bradbury-matrioshkabrains.pdf";
 "~^/docs/1999-bradbury-matrioshkabrains.pdfnnMore$" "/docs/ai/1999-bradbury-matrioshkabrains.pdf";
 "~^/docs/2002-notenki-memoirs.*$" "/docs/eva/2002-takeda-notenkimemoirs";
-"~^/docs/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/a$" "/docs/index";
 "~^/docs/.*/static/img/favicon.png$" "/static/img/favicon.png";
 "~^/docs/.*/static/img/favicon.ico$" "/static/img/favicon.ico";
@@ -6364,7 +6355,6 @@
 "~^/docs/docs/bitcoin/2008-nakamoto$" "/docs/bitcoin/2008-nakamoto";
 "~^/docs/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/docs/docs/bitcoin/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
-"~^/docs/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/docs/culture/1963-asimov$" "/docs/culture/1963-asimov";
 "~^/docs/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/docs/docs/culture/2007-wolfe$" "/docs/culture/2007-wolfe";
@@ -6601,7 +6591,6 @@
 "~^/nootropics/docs/bitcoin/2008-nakamoto$" "/docs/bitcoin/2008-nakamoto";
 "~^/nootropics/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/nootropics/docs/bitcoin/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
-"~^/nootropics/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/nootropics/docs/culture/1963-asimov$" "/docs/culture/1963-asimov";
 "~^/nootropics/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/nootropics/docs/eva/1996-animerica-conscience-otaking$" "/docs/eva/1996-animerica-conscience-otaking";
@@ -6670,7 +6659,6 @@
 "~^/2008-nakamoto$" "/docs/bitcoin/2008-nakamoto";
 "~^/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
-"~^/1955-nash$" "/docs/cs/1955-nash";
 "~^/1963-asimov$" "/docs/culture/1963-asimov";
 "~^/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/2007-wolfe$" "/docs/culture/2007-wolfe";
@@ -6686,7 +6674,6 @@
 "~^/2005-murakami$" "/docs/eva/2005-murakami";
 "~^/2005-sawaragi$" "/docs/eva/2005-sawaragi";
 "~^/2010-crc$" "/docs/eva/2010-crc";
-"~^/2011-house$" "/docs/anime/eva/2011-house";
 "~^/2002-gibson$" "/docs/japanese/2002-gibson";
 "~^/teika$" "/docs/japanese/teika";
 "~^/2010-richardson-bythenumbers-vectors30$" "/docs/philo/2010-richardson-bythenumbers-vectors30";
@@ -11491,7 +11478,6 @@
 "~^/docs/genetics/selection/www.mountimprobable.com/DNM-arrests$" "/DNM-arrests";
 "~^/docs/genetics/selection/www.mountimprobable.com/DNM-survival$" "/DNM-survival";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/anime/2010-sarrazin$" "/docs/anime/2010-sarrazin";
-"~^/docs/genetics/selection/www.mountimprobable.com/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/eva/2003-oshii-izubuchi$" "/docs/eva/2003-oshii-izubuchi";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/eva/2004-okada$" "/docs/eva/2004-okada";
 "~^/docs/genetics/selection/www.mountimprobable.com/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
@@ -11550,7 +11536,6 @@
 "~^/improvments$" "/Improvements";
 "~^/Book-Reviews$" "/reviews/Books";
 "~^/doc%5B...%5Dndattraction20092014.html$" "/docs/psychology/okcupid/raceandattraction20092014.html";
-"~^/docs/1955-nash.*$" "/docs/cs/1955-nash";
 "~^/docs/1985-hofstadter.*$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/2012-hpmor-reviews.csv.*$" "/docs/lwsurvey/hpmor/2012-hpmor-reviews.csv";
 "~^/docs/genetics/selection/1977-eaton-carnivore-1-1.pdf$" "/docs/genetics/selection/1978-eaton-carnivore-1-1.pdf";
@@ -11752,7 +11737,6 @@
 "~^/docs/cat$" "/docs/catnip/index";
 "~^/docs/Melatonin/1998-Lewy.*$" "/docs/melatonin/1998-lewy.pdf";
 "~^/Prediction-markets\\$" "/Prediction-markets";
-"~^/eva/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/statistics/decision/1994-benter.p$" "/docs/statistics/decision/1994-benter.pdf";
 "~^/docs/statistics/decision/1994-benter.$" "/docs/statistics/decision/1994-benter.pdf";
 "~^/docs/statistics/decision/1994-benter$" "/docs/statistics/decision/1994-benter.pdf";
@@ -12014,7 +11998,6 @@
 "~^/docs/sociology/docs/anime/2010-sarrazin$" "/docs/anime/2010-sarrazin";
 "~^/docs/sociology/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/docs/sociology/docs/bitcoin/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
-"~^/docs/sociology/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/sociology/docs/culture/1963-asimov$" "/docs/culture/1963-asimov";
 "~^/docs/sociology/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/docs/sociology/docs/culture/2007-wolfe$" "/docs/culture/2007-wolfe";
@@ -12291,7 +12274,6 @@
 "~^/docs/statistics/Weather$" "/Weather";
 "~^/docs/statistics/Wikipedia-and-Knol$" "/Wikipedia-and-Knol";
 "~^/docs/statistics/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
-"~^/docs/statistics/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/statistics/docs/eva/1997-animeland-may-hideakianno-interview-english$" "/docs/eva/1997-animeland-may-hideakianno-interview-english";
 "~^/docs/statistics/docs/eva/2005-murakami$" "/docs/eva/2005-murakami";
 "~^/docs/statistics/fiction/Men-of-Iron$" "/fiction/Men-of-Iron";
@@ -12508,7 +12490,6 @@
 "~^/docs/www/docs/bitcoin/2008-nakamoto$" "/docs/bitcoin/2008-nakamoto";
 "~^/docs/www/docs/bitcoin/2011-davis$" "/docs/bitcoin/2011-davis";
 "~^/docs/www/docs/bitcoin/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
-"~^/docs/www/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/www/docs/culture/1963-asimov$" "/docs/culture/1963-asimov";
 "~^/docs/www/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/docs/www/docs/culture/2007-wolfe$" "/docs/culture/2007-wolfe";
@@ -13311,7 +13292,6 @@
 "~^/2014-spirulina/static/js/rewrite.js$" "/static/js/rewrite.js";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/2012-election-predictions$" "/2012-election-predictions";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/Arias-past-present-and-future$" "/Arias-past-present-and-future";
-"~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
 "~^/docs/rotten.com/library/conspiracy/jasons/Ads$" "/Ads";
 "~^/docs/rotten.com/library/conspiracy/jasons/docs/japanese/2002-gibson$" "/docs/japanese/2002-gibson";
@@ -13589,7 +13569,6 @@
 "~^/nootropics/Catnip-survey$" "/Catnip-survey";
 "~^/nootropics/Search$" "/Search";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Book-reviews$" "/reviews/Books";
-"~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/docs/cs/1955-nash$" "/1955-nash";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/docs/eva/2005-murakami$" "/2005-murakami";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Red$" "/Red";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/Wikipedia-and-YouTube$" "/Wikipedia-and-YouTube";
@@ -14067,7 +14046,6 @@
 "~^/docs/psychology/Prediction-markets$" "/Prediction-markets";
 "~^/docs/psychology/zeo/Caffeine$" "/zeo/Caffeine";
 "~^/docs/psychology/zeo/ZMA$" "/zeo/ZMA";
-"~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/docs/cs/1955-nash$" "/docs/cs/1955-nash";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/docs/eva/2003-rahxephoncomplete-anno-izubuchi$" "/docs/eva/2003-rahxephoncomplete-anno-izubuchi";
 "~^/docs/rotten.com/library/crime/terrorism/terror-tactics/suitcase-nukes/Spaced-repetition$" "/Spaced-repetition";
 "~^/2011-[Ss]an-.*$" "/docs/personal/index";
@@ -15755,7 +15733,6 @@
 "~^/newsltter/2018\/$" "/newsletter/2018/";
 "~^/newsltter/2019\/$" "/newsletter/2019/";
 "~^/NicotineI$" "/Nicotine";
-"~^/nootropics/docs/eva/2011-house$" "/docs/anime/eva/2011-house";
 "~^/On-Stress.html$" "/On-Stresso";
 "~^/static/3D\?.*$" "/static/404";
 "~^/The-Gift-of-the-Amyg-dali$" "/fiction/Batman";
@@ -18441,7 +18418,6 @@
 "~^/docs/psychology/okcupid/howyourraceaf$" "/docs/psychology/okcupid/samesexdataforracevsreplyrates.html";
 "~^/docs/fiction/1956-faulkner.html.*$" "https://www.theparisreview.org/interviews/4954/the-art-of-fiction-no-12-william-faulkner";
 "~^/docs/2015-rottensteiner.pdf.*$" "/docs/genetics/2015-rottensteiner.pdf";
-"~^/docs/2011-houe.*$" "/docs/anime/eva/2011-house";
 "~^/\./docs/2010-sarrazin.*$" "/docs/anime/2010-sarrazin";
 "~^/\./docs/2007-wolfe.*$" "/docs/culture/2007-wolfe";
 "~^/\./docs/2002-radiance.*$" "/docs/radiance/2002-scholz-radiance";
@@ -18449,7 +18425,6 @@
 "~^/\./docs/1985-hofstadter.*$" "/docs/xrisks/1985-hofstadter";
 "~^/docs/1978-mccord.pdf.*$" "/docs/sociology/1978-mccord.pdf";
 "~^/./docs/1963-asimov-sword-of-achilles.*$" "/docs/culture/1963-asimov";
-"~^/\./docs/1955-nash.*$" "/docs/cs/1955-nash";
 "~^/2018-maier-gds-figure2-selfreportedcognitiveenhancement.png.*$" "/images/modafinil/2018-maier-gds-figure2-selfreportedcognitiveenhancement.png";
 "~^/YouTube.*$" "https://www.youtube.com/";
 "~^/Twitter.*$" "https://nitter.hu/";
@@ -18761,7 +18736,6 @@
 "~^/docs/biology/2000-iapac-norvir/description.html/index.html.*$" "/docs/biology/2000-iapac-norvir/description.html";
 "~^/docs/biology/2000-iapac-norvir/index.html/index.html.*$" "/docs/biology/2000-iapac-norvir/index.html";
 "~^/docs/bitcoin/2008-nakamoto/index.html.*$" "/docs/bitcoin/2008-nakamoto";
-"~^/docs/cs/1955-nash/index.html.*$" "/docs/cs/1955-nash";
 "~^/docs/culture/1963-asimov/index.html.*$" "/docs/culture/1963-asimov";
 "~^/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman/index.html.*$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
 "~^/docs/culture/2007-wolfe/index.html.*$" "/docs/culture/2007-wolfe";
@@ -20422,7 +20396,6 @@
 "~^/docs/link-bibliography/https//www.edge.org/conversation/mc2011-history-violence-pinker.*$" "https://www.edge.org/conversation/mc2011-history-violence-pinker";
 "~^/docs/link-bibliography/https//www.edge.org/conversation/gin-television-and-cognitive-surplus.*$" "https://www.edge.org/conversation/gin-television-and-cognitive-surplus";
 "~^/docs/link-bibliography/https//www.edge.org/conversation/-brains-plus-brawn.*$" "https://www.edge.org/conversation/-brains-plus-brawn";
-"~^/docs/psychology/2017-kirschner.pdfç.*$" "/docs/psychology/2017-kirschner.pdf";
 "~^/docs/pyscholgy/2008-evans.pdf.*$" "/docs/psychology/2008-evans.pdf";
 "~^/Lins.*$" "/Links";
 "~^/docs/rotten.*/Justifications.*$" "/Justifications";
@@ -20444,7 +20417,6 @@
 "~^/docs/longevity/Morning-writing.*$" "/Morning-writing";
 "~^/docs/longevity/Spaced-repetition.*$" "/Spaced-repetition";
 "~^/docs/longevity/The-Melancholy-of-Subculture-Society.*$" "/The-Melancholy-of-Subculture-Society";
-"~^/docs/longevity/docs/cs/1955-nash.*$" "/docs/cs/1955-nash";
 "~^/docs/psychology/Arias-past-present-and-future.*$" "/Arias-past-present-and-future";
 "~^/docs/psychology/Isomorphisms.*$" "/Isomorphisms";
 "~^/docs/psychology/Language.*$" "/Language";
@@ -20806,7 +20778,6 @@
 "~^/The-Value-of-One-Bit.*$" "/static/404";
 "~^/docs/link-bibliography/https/www.edge.org/conversation/mc2011-history-violence-pinker.*$" "https://www.edge.org/conversation/mc2011-history-violence-pinker";
 "~^/docs/link-bibliography/https/www.edge.org/conversation/the-evolved-self-management-system.*$" "https/www.edge.org/conversation/the-evolved-self-management-system";
-"~^/docs/[a-df-km-z].*/2011-house.*$" "/docs/anime/eva/2011-house";
 "~^/docs/member/.*$" "/static/404";
 "~^/docs/p.*/Scanners.*$" "/Scanners";
 "~^/docs/p.*/Wikipedia-and-Knol.*$" "/Wikipedia-and-Knol";
@@ -21876,7 +21847,6 @@
 "~^/static/build/link-extractor.hi.*$" "/static/build/link-extractor.hs";
 "~^/static/build/generateLinkBibliography.o.*$" "/static/build/generateLinkBibliography.hs";
 "~^/notenkimemoirs/.*$" "/docs/eva/2002-takeda-notenkimemoirs";
-"~^/nash/.*$" "/docs/cs/1955-nash";
 "~^/item\?id=20366039.*$" "https://news.ycombinator.com/item?id=20366039";
 "~^/GPT-3.14.*$" "/GPT-3";
 "~^/doxins.*$" "/Blackmail";
@@ -22997,7 +22967,6 @@
 "~^/docs/psychology/1950-keats.pdf%5C.*$" "/docs/psychology/1950-keats.pdf";
 "~^/docs/psychology/2008-alper.pdf%5C.*$" "/docs/psychology/2008-alper.pdf";
 "~^/docs/psychology/Danbooru2019.*$" "/Danbooru2021#danbooru2021";
-"~^/docs/[a-km-z].*/1955-nash.*$" "/docs/cs/cryptography/1955-nash";
 "~^/docs/rotten.com/library/crime/Field_Interrogation/vent2.jpg.*$" "/docs/rotten.com/library/crime/field-interrogation/vent2.jpg";
 "~^/docs/vitamin-d/2014-autier.pdf%5C.*$" "/docs/vitamin-d/2014-autier.pdf";
 "~^/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf%5C.*$" "/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf";
@@ -23045,7 +23014,6 @@
 "~^/Google-shutdown$" "/Google-shutdowns";
 "~^/docs/link-bibliography/Forking-paths.*$" "/docs/link-bibliography/Forking-Paths";
 "~^/docs/borges/`1947-borges-anewrefutationoftime.pdf.*$" "/docs/borges/1947-borges-anewrefutationoftime.pdf";
-"~^/docs/psychology/1941-cleckley-maskofsanity.pdfç.*$" "/docs/psychology/1941-cleckley-maskofsanity.pdf";
 "~^/docs/iq/ses/2007-zagorsky.pdfga.*$" "/docs/iq/ses/2007-zagorsky.pdf";
 "~^/docs/cofee/index.*$" "/docs/tea/index";
 "~^/docs/coffee/index.*$" "/docs/tea/index";
@@ -23082,6 +23050,26 @@
 "~^/about@colophon.*$" "/About#colophon";
 "~^/about@anonymous-feedback.*$" "/About#anonymous-feedback";
 "~^/aau.edu.jo.*$" "https://www.aau.edu.jo/ar";
+"~^/Links-I.*$" "/Links";
+"~^/credentials.*$" "/Links";
+"~^/tags/Little+Boy.*$" "/docs/anime/eva/little-boy/index";
+"~^/docs/statistics/crime/terrorism/2008-jost.pdf.*$" "/docs/crime/terrorism/2008-jost.pdf";
+"~^/docs/reinforcement-learning/model-free/decision-transformer/index.*$" "/docs/reinforcement-learning/model/decision-transformer/index";
+"~^/docs/psychology/Modafinil.*$" "/Modafinil";
+"~^/docs/anime/eva/2002-takeda-notenkimemoirs@first-contact-with-a-sci-fi-event.*$" "/docs/anime/eva/2002-takeda-notenkimemoirs#first-contact-with-a-sci-fi-event";
+"~^/The-Melancholy-of-Subculture-Societythe-bigger-screen.*$" "/The-Melancholy-of-Subculture-Society#the-bigger-screen";
+"~^/docs/[a-km-z].*/Wooden-pillows.*$" "/Wooden-pillows";
+"~^/docs/[a-km-z].*/DNM-archives.*$" "/DNM-archives";
+"~^/docs/psychology/okcupid/themathematicsofbeauty.html/$" "/docs/psychology/okcupid/themathematicsofbeauty.html";
+"~^/docs/nature/2013-alcock$" "/docs/nature/2013-alcock.pdf";
+"~^/docs/link-bibliography/fiction/poems.*$" "/docs/link-bibliography/fiction/Poems";
+"~^/docs/gwern.net-gitstats/authors.html/sortable.js.*$" "/docs/gwern.net-gitstats/sortable.js";
+"~^/docs/genetics/selection/artificial/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/docs/dnb/2013-couzinfrancel.pdf.*$" "/docs/statistics/meta-analysis/2013-couzinfrankel.pdf";
+"~^/docs/darknet-markets/evolution/2015-03-18-the_avid-evolutionmarketbackground-cardingforumsponzischemesle.html/$" "/docs/darknet-markets/evolution/2015-03-18-the_avid-evolutionmarketbackground-cardingforumsponzischemesle.html";
+"~^/docs/darknet-markets/2015-05-04-p2pox-overview.html$" "/docs/bitcoin/nashx/2015-05-04-p2pox-overview.html";
+"~^/CO2_Coin.*$" "/CO2-Coin";
+"~^/anno$" "/docs/anime/eva/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
