--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -953,9 +953,9 @@ default "";
 "~^/docs/nicotine\/$" "/docs/nicotine/index";
 "~^/docs/nicotine/index.htm$" "/docs/nicotine/index";
 "~^/docs/nicotine/index.html$" "/docs/nicotine/index";
-"~^/docs/nootropics\/$" "/docs/nootropics/index";
-"~^/docs/nootropics/index.htm$" "/docs/nootropics/index";
-"~^/docs/nootropics/index.html$" "/docs/nootropics/index";
+"~^/docs/nootropics\/$" "/docs/nootropic/index";
+"~^/docs/nootropics/index.htm$" "/docs/nootropic/index";
+"~^/docs/nootropics/index.html$" "/docs/nootropic/index";
 "~^/docs/philo\/$" "/docs/philo/index";
 "~^/docs/philo/brethrenofpurity\/$" "/docs/philo/brethrenofpurity/index";
 "~^/docs/philo/brethrenofpurity/index.htm$" "/docs/philo/brethrenofpurity/index";
@@ -1114,7 +1114,7 @@ default "";
 "~^/docs/music-distraction/$" "/docs/music-distraction/index";
 "~^/docs/nature/$" "/docs/nature/index";
 "~^/docs/nicotine/$" "/docs/nicotine/index";
-"~^/docs/nootropics/$" "/docs/nootropics/index";
+"~^/docs/nootropics/$" "/docs/nootropic/index";
 "~^/docs/philo/$" "/docs/philo/index";
 "~^/docs/philo/brethrenofpurity/$" "/docs/philo/brethrenofpurity/index";
 "~^/docs/predictions/$" "/docs/predictions/index";
@@ -1448,7 +1448,7 @@ default "";
 "~^/docs/eva/2004-okada$" "/docs/eva/little-boy/2004-okada";
 "~^/docs/eva/2005-murakami$" "/docs/eva/little-boy/2005-murakami";
 "~^/docs/reinforcement-learning/2021-mirhoseini.pdf.*$" "/docs/reinforcement-learning/model/2021-mirhoseini.pdf";
-"~^/self-experimentation$" "/docs/nootropics/quantified-self/index";
+"~^/self-experimentation$" "/docs/nootropic/quantified-self/index";
 "~^/docs/psychology/1991-brown-humanuniversals.pdfByung.*$" "/docs/psychology/1991-brown-humanuniversals.pdf";
 "~^/docs/ai/2018-davies.pdf.*$" "/docs/ai/scaling/hardware/2018-davies.pdf";
 
@@ -4296,3 +4296,4 @@ default "";
 "~^/docs/cat/genetics/2002-cameronbeaumont.pdf.*$" "/docs/cat/psychology/2002-cameronbeaumont.pdf";
 "~^/docs/psychology/2018-gordon-supplement.pdf.*$" "/docs/psychiatry/2018-gordon-supplement.pdf";
 "~^/docs/psychology/2018-gordon.pdf.*$" "/docs/psychiatry/2018-gordon.pdf";
+"~^/docs/psychology/1941-cleckley-maskofsanity.pdf.*$" "/docs/psychiatry/1941-cleckley-maskofsanity.pdf";
