--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4298,3 +4298,13 @@ default "";
 "~^/docs/psychology/2018-gordon.pdf.*$" "/docs/psychiatry/2018-gordon.pdf";
 "~^/docs/psychology/1941-cleckley-maskofsanity.pdf.*$" "/docs/psychiatry/1941-cleckley-maskofsanity.pdf";
 "~^/docs/genetics/2015-rottensteiner.pdf.*$" "/docs/genetics/heritable/2015-rottensteiner.pdf";
+"~^/docs/iq/2015-zhu.pdf.*$" "/docs/genetics/heritable/correlation/2015-zhu.pdf";
+"~^/docs/modafinil/2004-mueller.pdf.*$"  "/docs/modafinil/2004-muller.pdf";
+"~^/docs/psychology/1980-siegel.pdf.*$" "/docs/psychology/vision/1980-siegel.pdf";
+"~^/docs/technology/1972-swift.pdf.*$" "/docs/science/1972-swift.pdf";
+"~^/docs/psychology/1963-gussow.pdf.*$" "/docs/psychology/vision/1963-gussow.pdf";
+"~^/docs/history/1948-deroover-themedicibank.pdf.*$" "/docs/history/medici/1948-deroover-themedicibank.pdf";
+"~^/docs/history/1963-deroover-theriseanddeclineofthemedicibank.pdf.*$" "/docs/history/medici/1963-deroover-theriseanddeclineofthemedicibank.pdf";
+"~^/docs/economics/2019-brynjolfsson-3.pdf.*$" "/docs/economics/automation/2019-brynjolfsson-3.pdf";
+"~^/docs/economics/2021-brynjolfsson.pdf.*$" "/docs/economics/automation/2021-brynjolfsson.pdf";
+"~^/docs/iq/2021-marks.pdf.*$" "/docs/iq/ses/2021-marks-2.pdf";
