--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -656,6 +656,11 @@ server {
         rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
+        rewrite ^/(?<original>docs/.*),pdf$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)%C3%A7$ /$original permanent;
+        rewrite ^/(?<original>.*)/index/index$ /$original/index permanent;
+        rewrite ^/ttps://www\.gwern\.net/(?<original>.*)$ /$original permanent;
+
         rewrite ^/docs/silk-road/(?<old>.*)$ /docs/darknet-markets/$old permanent;
         rewrite ^/docs/ai/stylegan/(?<old>.*)$ /docs/ai/gan/stylegan/$old permanent;
         rewrite ^/docs/ai/rnn/(?<old>.*)$ /docs/ai/nn/rnn/$old permanent;
@@ -681,10 +686,8 @@ server {
         rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
         rewrite ^/docs/sf/(?<old>.*)$ /docs/fiction/science-fiction/$old permanent;
         rewrite ^/docs/ai/alphafold/(?<old>.*)$ /docs/ai/nn/transformer/alphafold/$old permanent;
-        rewrite ^/(?<original>docs/.*),pdf$ /$original.pdf permanent;
-        rewrite ^/(?<original>.*)%C3%A7$ /$original permanent;
-        rewrite ^/(?<original>.*)/index/index$ /$original/index permanent;
-        rewrite ^/ttps://www\.gwern\.net/(?<original>.*)$ /$original permanent;
+        rewrite ^/docs/lithium/(?<old>.*)$ /docs/psychiatry/lithium/$old permanent;
+        rewrite ^/(?<before>.*)/%E2%80%8B(?<after>.*)$ /$before/$after permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
