--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -398,10 +398,10 @@ server {
         rewrite ^/(?<original>.*)\+\&cd\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&ved\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&xid\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\&fbid\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?fbid\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\&fbclid\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?fbclid\=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\&fbid.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?fbid.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\&fbclid.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?fbclid.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&key=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&id\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\%E2\%80\%99$ /$original permanent;
