--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23141,6 +23141,59 @@
 "~^/fiction/Clippz.*$" "/fiction/Clippy";
 "~^/%E2%80%8Bdocs/%E2%80%8Bpsychology/%E2%80%8B2012-bainbridge.pdf.*$" "/docs/ai/2012-bainbridge.pdf";
 "~^/thebreakingnews.co%2Fchongqing-explosion-in-chinas-chongqing-kills-16-state-media-times-of-india%2F.*$" "https://timesofindia.indiatimes.com/world/china/explosion-in-chinas-chongqing-kills-16-state-media/articleshow/88767965.cms";
+"~^/Larp.*$" "/LARPing";
+"~^/docs/genetics/gametogenesis/2021-yoshi$" "/docs/genetics/gametogenesis/2021-yoshi.pdf";
+"~^/docs/link-bibliography/everything$" "/docs/link-bibliography/Everything";
+"~^/docs/philosophy/ethics/@gwern-charity-is-not-about-helping-section.*$" "/docs/philosophy/ethics/#gwern-charity-is-not-about-helping-section";
+"~^/charity-is-not-about-helping@updating-on-evidence.*$" "/Charity-is-not-about-helping#updating-on-evidence";
+"~^/charity-is-not-about-helping@the-hope-function.*$" "/Charity-is-not-about-helping#the-hope-function";
+"~^/charity-is-not-about-helping@the-exposed-nest-frost.*$" "/Charity-is-not-about-helping#the-exposed-nest-frost";
+"~^/charity-is-not-about-helping@sins-of-omission.*$" "/Charity-is-not-about-helping#sins-of-omission";
+"~^/charity-is-not-about-helping@sins-of-commission.*$" "/Charity-is-not-about-helping#sins-of-commission";
+"~^/charity-is-not-about-helping@see-also.*$" "/Charity-is-not-about-helping#see-also";
+"~^/charity-is-not-about-helping@external-links.*$" "/Charity-is-not-about-helping#external-links";
+"~^/charity-is-not-about-helping@doing-it-less-wrong-rosetta-home.*$" "/Charity-is-not-about-helping#doing-it-less-wrong-rosetta-home";
+"~^/charity-is-not-about-helping@charity-is-not-about-helping.*$" "/Charity-is-not-about-helping#charity-is-not-about-helping";
+"~^/charity-is-not-about-helping@charitable-supercomputing.*$" "/Charity-is-not-about-helping#charitable-supercomputing";
+"~^/charity-is-not-about-helping@benefits.*$" "/Charity-is-not-about-helping#benefits";
+"~^/charity-is-not-about-helping@appendix.*$" "/Charity-is-not-about-helping#appendix";
+"~^/docs/genetics/2021-oreilly.pdf.*$" "/docs/genetics/heritable/correlation/2021-oreilly.pdf";
+"~^/discussrussia.blogspot.com%2F2013%2F05%2Fblog-post_29.html" "https://discussrussia.blogspot.com/2013/05/blog-post_29.html";
+"~^/.*%C3%A2%E2%82%AC%E2%80%B92012-bainbridge.pdf.*$" "/docs/ai/2012-bainbridge.pdf";
+"~^/About-sleep.*$" "/About";
+"~^/docs/statistics/meta-analysis/1994-cook$" "/docs/statistics/meta-analysis/1994-cook-metanalysisexplanationcasebook.pdf";
+"~^/docs/statistics/probability/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/hephaistos.ai$" "https://hephaistos.ai/";
+"~^/static/build/LinkIcon.o.*$" "/static/build/LinkIcon.hs";
+"~^/static/build/LinkBacklink.hi.*$" "/static/build/LinkBacklink.hs";
+"~^/docs/[a-km-z].*/Missing-Cities.*$" "/fiction/Missing-Cities";
+"~^/docs/link-bibliography/questions.*$" "/docs/link-bibliography/Questions";
+"~^/D\?\?\?N\?\?.*-survival.*$" "/DNM-survival";
+"~^/buddhism.*$" "/docs/psychiatry/meditation/index";
+"~^/Danbooru,January.*$" "/Danbooru2021";
+"~^/adsfkhgashfj.*$" "/index";
+"~^/noth$" "/index";
+"~^/nothing$" "/index";
+"~^/nothing-here$" "/index";
+"~^/docs/cs/hard$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardwar$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardware/202$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardware/202$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardware/20$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardware/20$" "/docs/cs/hardware/index";
+"~^/docs/cs/hardware/2021-rangan$" "/docs/cs/hardware/2021-ranganathan.pdf";
+"~^/docs/iq/1971-seemaZablocki-v.-Redhailnova.pdf.*$" "/docs/iq/1971-seemanova.pdf";
+"~^/docy/2019$" "/docs/index";
+"~^/docs/[a-m-z].*/docs/eva/2011-house$" "/docs/anime/eva/2011-house";
+"~^/Complem$" "/Complement";
+"~^/Abouttools.*$" "/About#tools";
+"~^/2010-hatemi-table3-politicalattitudesheritability.png.*$" "/images/genetics/heritable/2010-hatemi-table3-politicalattitudesheritability.png";
+"~^/antonov.JPG" "https://web.archive.org/web/19980710052633if_/http://nausicaa.net/miyazaki/file-archive/UNSORTED/antonov.JPG";
+"~^/docs/link-bibliography/ontological-pantheism.*$" "/docs/link-bibliography/Ontological-pantheism";
+"~^/docs/radiance/2002-scholz-radiance@about-radiance.*$" "/docs/radiance/2002-scholz-radiance#about-radiance";
+"~^/extracts-options.js.*$" "/static/js/extracts-options.js";
+"~^/predictions$" "/docs/statistics/predictions/index";
+"~^/reviews/@all-about-eve.*$" "/reviews/Movies#all-about-eve";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27483,6 +27536,39 @@
 "~^/EmpireBak2010/*$"  "/static/404.html";
 "~^/phpcms/.*$" "/static/404.html";
 "~^/110+140+2790-13400.*$" "/static/404.html";
+"~^/.*/register.php.*$" "/static/404.html";
+"~^/buzzbgonezap.net.*$" "/static/404.html";
+"~^/common.inc.php.*$" "/static/404.html";
+"~^/bestafiles.com.*$" "/static/404.html";
+"~^/bausch.kr-atlas.monaxikoslykos.*$" "/static/404.html";
+"~^/.*/CMSPages/.*$" "/static/404.html";
+"~^/fuel/pages/.*$" "/static/404.html";
+"~^/live_env.*$" "/static/404.html";
+"~^/issmall/.*$" "/static/404.html";
+"~^/ross-art.su%2Fb.*$" "/static/404.html";
+"~^/vibesbullet.com.*$" "/static/404.html";
+"~^/version.*$" "/static/404.html";
+"~^/static/js-build/libs/html5shiv.*$" "/static/404.html";
+"~^/ChAI8IialgYQncr.*$" "/static/404.html";
+"~^/berufsbekleidung-medizin-onlineshop.de.*$" "/static/404.html";
+"~^/docs/anime/eva/privmsg.php.*$" "/static/404.html";
+"~^/docs/anime/eva/memberlist.php.*$" "/static/404.html";
+"~^/docs/CGI/.*$" "/static/404.html";
+"~^/docs/jax_guestbook.php.*$" "/static/404.html";
+"~^/docs/index.php.*$" "/docs/index";
+"~^/docs/darknet-markets/silk-road/1/index.php.*$" "/docs/darknet-markets/silk-road/1/index";
+"~^/docs/darknet-markets/misc.php.*$" "/static/404.html";
+"~^/komifilrybvod.ru.*$" "/static/404.html";
+"~^/itcrowd72.ru.*$" "/static/404.html";
+"~^/.*/mod_config.php.*$" "/static/404.html";
+"~^/telegra.ph%.*$" "/static/404.html";
+"~^/Solo+.*$" "/static/404.html";
+"~^/xleet-.*$" "/static/404.html";
+"~^/u003ewishlist.*$" "/static/404.html";
+"~^/topsubmittrafficlinkrea.*$" "/static/404.html";
+"~^/.*/admin.php.*$" "/static/404.html";
+"~^/.*/privmsg.php.*$" "/static/404.html";
+"~^/.*/memberlist.php.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
