--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4308,3 +4308,14 @@ default "";
 "~^/docs/economics/2019-brynjolfsson-3.pdf.*$" "/docs/economics/automation/2019-brynjolfsson-3.pdf";
 "~^/docs/economics/2021-brynjolfsson.pdf.*$" "/docs/economics/automation/2021-brynjolfsson.pdf";
 "~^/docs/iq/2021-marks.pdf.*$" "/docs/iq/ses/2021-marks-2.pdf";
+"~^/docs/psychology/2021-luchetti.pdf.*$" "/docs/psychology/personality/2021-luchetti.pdf";
+"~^/docs/iq/2021-falk.pdf.*$" "/docs/iq/ses/2021-falk.pdf";
+"~^/docs/iq/2019-andreoni.pdf.*$" "/docs/iq/ses/2019-andreoni.pdf";
+"~^/docs/psychology/2022-furnham.pdf.*$" "/docs/psychology/personality/2022-furnham.pdf";
+"~^/docs/psychology/personality2020-matz.pdf.*$" "/docs/psychology/personality/2020-matz.pdf";
+"~^/docs/psychology/2020-soto.pdf.*$" "/docs/psychology/personality/2020-soto.pdf";
+"~^/docs/psychology/2019-curran.pdf.*$" "/docs/psychology/personality/2019-curran.pdf";
+"~^/docs/psychology/2018-gerlach.pdf.*$" "/docs/psychology/personality/2018-gerlach.pdf";
+"~^/docs/psychology/2018-kajonius.pdf.*$" "/docs/psychology/personality/2018-kajonius.pdf";
+"~^/images/rl/2022-perolat-figure1b-deepnashstrategiselfplayarchitecture.png.*$" "/images/rl/2022-perolat-figure1b-deepnashstrategoselfplayarchitecture.png";
+"~^/docs/genetics/heritable/2022-raffington.pdf.*$" "/docs/genetics/heritable/correlation/2022-raffington.pdf";
