--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -688,6 +688,10 @@ server {
         rewrite ^/docs/ai/alphafold/(?<old>.*)$ /docs/ai/nn/transformer/alphafold/$old permanent;
         rewrite ^/docs/lithium/(?<old>.*)$ /docs/psychiatry/lithium/$old permanent;
         rewrite ^/(?<before>.*)/%E2%80%8B(?<after>.*)$ /$before/$after permanent;
+        rewrite ^/docs/iq/smpy/(?<old>.*)$ /docs/iq/high/smpy/$old permanent;
+        rewrite ^/docs/iq/anne-roe/(?<old>.*)$ /docs/iq/high/anne-roe/$old permanent;
+        rewrite ^/docs/iq/fullerton/(?<old>.*)$ /docs/iq/high/fullerton/$old permanent;
+        rewrite ^/docs/iq/munich/(?<old>.*)$ /docs/iq/high/munich/$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
