--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23194,6 +23194,9 @@
 "~^/extracts-options.js.*$" "/static/js/extracts-options.js";
 "~^/predictions$" "/docs/statistics/predictions/index";
 "~^/reviews/@all-about-eve.*$" "/reviews/Movies#all-about-eve";
+"~^/Otaku$" "/otaku";
+"~^/docs/japanese/2001-dcbary-Universlition.pdf.*$" "http://gen.lib.rus.ec/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/dpcs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html.*$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
