--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4319,3 +4319,40 @@ default "";
 "~^/docs/psychology/2018-kajonius.pdf.*$" "/docs/psychology/personality/2018-kajonius.pdf";
 "~^/images/rl/2022-perolat-figure1b-deepnashstrategiselfplayarchitecture.png.*$" "/images/rl/2022-perolat-figure1b-deepnashstrategoselfplayarchitecture.png";
 "~^/docs/genetics/heritable/2022-raffington.pdf.*$" "/docs/genetics/heritable/correlation/2022-raffington.pdf";
+"~^/docs/psychology/2018-keogh.pdf.*$" "/docs/psychology/vision/2018-keogh.pdf";
+"~^/docs/iq/1993-subotnik-geniusrevisited.pdf.*$" "/docs/iq/high/1993-subotnik-geniusrevisited.pdf";
+"~^/docs/iq/1989-subotnik.pdf.*$" "/docs/iq/high/1989-subotnik.pdf";
+"~^/docs/iq/1936-byrns.pdf.*$" "/docs/iq/high/1936-byrns.pdf";
+"~^/docs/iq/1947-terman.pdf.*$" "/docs/iq/high/1947-terman.pdf";
+"~^/docs/iq/1947-terman-thegiftedchildgrowsup.pdf.*$" "/docs/iq/high/1947-terman-thegiftedchildgrowsup.pdf";
+"~^/docs/iq/1975-seagoe-termanandthegifted.pdf.*$" "/docs/iq/high/1975-seagoe-termanandthegifted.pdf";
+"~^/docs/iq/1992-shurkin-termanskids.pdf.*$" "/docs/iq/high/1992-shurkin-termanskids.pdf";
+"~^/docs/genetics/heritable/2020-xu.pdf.*$" "/docs/genetics/heritable/correlation/2020-xu.pdf";
+"~^/docs/iq/2020-mcgue.pdf.*$" "/docs/iq/ses/2020-mcgue.pdf";
+"~^/docs/psychology/2003-haney.pdf.*$" "/docs/psychiatry/2003-haney.pdf";
+"~^/docs/iq/2014-dobbie.pdf.*$" "/docs/iq/high/2014-dobbie.pdf";
+"~^/docs/psychology/2001-jensen.pdf.*$" "/docs/iq/2001-jensen.pdf";
+"~^/docs/iq/1926-cox-theearlymentaltraitsof300geniuses.pdf.*$" "/docs/iq/high/1926-cox-theearlymentaltraitsof300geniuses.pdf";
+"~^/docs/iq/1931-white.pdf.*$" "/docs/iq/high/1931-white.pdf";
+"~^/docs/iq/1936-miles.pdf.*$" "/docs/iq/high/1936-miles.pdf";
+"~^/docs/iq/1957-mccurdy.pdf.*$" "/docs/iq/high/1957-mccurdy.pdf";
+"~^/docs/iq/1968-oden.pdf.*$" "/docs/iq/high/1968-oden.pdf";
+"~^/docs/iq/1971-albert.pdf.*$" "/docs/iq/high/1971-albert.pdf";
+"~^/docs/iq/1975-keating.pdf.*$" "/docs/iq/high/1975-keating.pdf";
+"~^/docs/iq/1978-walberg.pdf.*$" "/docs/iq/high/1978-walberg.pdf";
+"~^/docs/iq/1987-simonton.pdf.*$" "/docs/iq/high/1987-simonton.pdf";
+"~^/docs/iq/1999-rogers.pdf.*$" "/docs/iq/high/1999-rogers.pdf";
+"~^/docs/iq/2014-bui.pdf.*$" "/docs/iq/high/2014-bui.pdf";
+"~^/docs/iq/2015-hofman.pdf.*$" "/docs/iq/high/2015-hofman.pdf";
+"~^/docs/iq/2016-zen.pdf.*$" "/docs/iq/high/2016-zen.pdf";
+"~^/docs/iq/2018-warne-2.pdf.*$" "/docs/iq/high/2018-warne-2.pdf";
+"~^/docs/iq/2018-tervonen.pdf.*$" "/docs/iq/high/2018-tervonen.pdf";
+"~^/docs/iq/2018-kell.pdf.*$" "/docs/iq/high/2018-kell.pdf";
+"~^/docs/iq/2018-guez.pdf.*$" "/docs/iq/high/2018-guez.pdf";
+"~^/docs/iq/2018-houng.pdf.*$" "/2018-houng.pdf";
+"~^/docs/iq/2020-simonton.pdf.*$" "/docs/iq/high/2020-simonton.pdf";
+"~^/docs/iq/2020-bergold.pdf.*$" "/docs/iq/high/2020-bergold.pdf";
+"~^/docs/iq/2020-barrow.pdf.*$" "/docs/iq/high/2020-barrow.pdf";
+"~^/docs/iq/2010-subotnik.pdf.*$" "/docs/iq/high/2010-subotnik.pdf";
+"~^/docs/iq/1996-jensen.pdf.*$" "/docs/iq/high/1996-jensen.pdf";
+"~^/docs/iq/1993-chubarikov.pdf.*$" "/docs/iq/high/1993-chubarikov.pdf";
